lab1/Test/L1-A-8-36.output
Error Type B at Line 13
Error Type B at Line 17
Error Type B at Line 32
Error Type B at Line 69
